--- a/storage/src/main/AndroidManifest.xml
+++ b/storage/src/main/AndroidManifest.xml
@@ -3,24 +3,24 @@
     package="com.ani.online.storage">
 
     <application
+        android:name=".StorageApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".StorageApp">
-        <activity android:name=".AppSpecificStorageActivity">
-
-        </activity>
-        <activity android:name=".SettingsActivity">
-        </activity>
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".chat.ChatActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".AppSpecificStorageActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
