--- a/notifications/build.gradle
+++ b/notifications/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.appcompat:appcompat:$appcompat_version"
+
+    implementation("com.louiscad.splitties:splitties-alertdialog-appcompat:3.0.0-alpha07")
 }
